--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 spring.application.name=ShopWise
+server.port=5000
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/shopwise
+spring.datasource.username=jovin
+spring.datasource.password=JOVIN19
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+# Gmail SMTP configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=homedel.rw@gmail.com
+spring.mail.password=qsxukogjnpzxpwee
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Options: create, update, create-drop, validate
+spring.jpa.hibernate.ddl-auto=update
+debug=true
+
+api.prefix=/api
