--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,9 @@ debug=true
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# Gemini API Configuration
+gemini.api.key=AIzaSyCIqEu8vwon-dYpt3ySn11n3kwHzlDDOBY
+gemini.model.name=gemini-2.0-flash
+gemini.project.id=500718230872
+gemini.location.id=us-central1
