--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # Gemini API Configuration
-gemini.api.key=AIzaSyCIqEu8vwon-dYpt3ySn11n3kwHzlDDOBY
-gemini.model.name=gemini-2.0-flash
-gemini.project.id=500718230872
+gemini.api.key=${GEMINI_API_KEY}
+gemini.model.name=${GEMINI_MODELNAME}
+gemini.project.id=${GEMINI_PROJECTID}
 gemini.location.id=us-central1
