fixed the gemini model error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,6 @@ spring.servlet.multipart.max-request-size=10MB
 
 # Gemini API Configuration
 gemini.api.key=${GEMINI_API_KEY}
-gemini.model.name=${GEMINI_MODELNAME}
-gemini.project.id=${GEMINI_PROJECTID}
+gemini.model.name=${GEMINI_MODEL_NAME}
+gemini.project.id=${GEMINI_PROJECT_ID}
 gemini.location.id=us-central1
