--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=ShopWise
 server.port=5000
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/shopwise
-spring.datasource.username=jovin
-spring.datasource.password=JOVIN19
+#spring.datasource.url=jdbc:postgresql://localhost:5432/shopwise
+#spring.datasource.username=jovin
+#spring.datasource.password=JOVIN19
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/shopwise}
+spring.datasource.username=${DB_USERNAME:jovin}
+spring.datasource.password=${DB_PASSWORD:JOVIN19}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
