Use PORT environment variable for Railway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=ShopWise
-server.port=5000
-
+server.port=${PORT:5000}
 #spring.datasource.url=jdbc:postgresql://localhost:5432/shopwise
 #spring.datasource.username=jovin
 #spring.datasource.password=JOVIN19
