--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,6 @@ gemini.api.key=${GEMINI_API_KEY}
 gemini.model.name=${GEMINI_MODEL_NAME}
 gemini.project.id=${GEMINI_PROJECT_ID}
 gemini.location.id=us-central1
+
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
