Fixed the db connection issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 spring.application.name=ShopWise
 server.port=${PORT:5000}
 #spring.datasource.url=jdbc:postgresql://localhost:5432/shopwise
-#spring.datasource.username=jovin
-#spring.datasource.password=JOVIN19
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/shopwise}
-spring.datasource.username=${DB_USERNAME:jovin}
-spring.datasource.password=${DB_PASSWORD:JOVIN19}
+spring.datasource.url=jdbc:postgresql://aws-0-eu-central-1.pooler.supabase.com:6543/postgres?pool_mode=transaction
+spring.datasource.username=postgres.fxwxhhhqlkpslmnjkqso
+spring.datasource.password=ZKiwFL0hzhwi0b9G
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
