--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.username=postgres.fxwxhhhqlkpslmnjkqso
 spring.datasource.password=ZKiwFL0hzhwi0b9G
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.hikari.data-source-properties.prepareThreshold=0
+spring.datasource.hikari.data-source-properties.resetOnReturn=prepared_statements
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
