--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.url=jdbc:postgresql://aws-0-eu-central-1.pooler.supabase.com:6
 spring.datasource.username=postgres.fxwxhhhqlkpslmnjkqso
 spring.datasource.password=ZKiwFL0hzhwi0b9G
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.hikari.data-source-properties.prepareThreshold=0
 spring.datasource.hikari.data-source-properties.resetOnReturn=prepared_statements
 
@@ -32,6 +33,12 @@ gemini.api.key=${GEMINI_API_KEY}
 gemini.model.name=${GEMINI_MODEL_NAME}
 gemini.project.id=${GEMINI_PROJECT_ID}
 gemini.location.id=us-central1
+
+#cloudinary config
+
+cloudinary.cloudname=${CLOUDINARY_CLOUD_NAME}
+cloudinary.apikey=${CLOUDINARY_API_KEY}
+cloudinary.secret=${CLOUDINARY_API_SECRET}
 
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
