--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,9 +36,13 @@ gemini.location.id=us-central1
 
 #cloudinary config
 
-cloudinary.cloudname=${CLOUDINARY_CLOUD_NAME}
-cloudinary.apikey=${CLOUDINARY_API_KEY}
-cloudinary.secret=${CLOUDINARY_API_SECRET}
+#cloudinary.cloud.name=${CLOUDINARY_CLOUD_NAME}
+#cloudinary.apikey=${CLOUDINARY_API_KEY}
+#cloudinary.secret=${CLOUDINARY_API_SECRET}
+
+cloudinary.cloud.name=dpxldzsp3
+cloudinary.apikey=761625938752435
+cloudinary.secret=yvtJ5nTGL1SHMn9iPD13lPLY3Ho
 
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
